# web_module_06

./: README.md  create_table.py  db_connection.py  exec_query.py  insert_to_table.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_select.py  seeds.py  users_hw.db
