[tool.poetry]
name = "web-module-06"
version = "0.1.0"
description = ""
authors = ["Vladislav <109065019+TimVladislav13010@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_module_06"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.0.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
